@startuml
' ENUMS

entity User {
  *id : String <<PK>>
  name : String
  email : String <<UQ>>
  password : String
  birthDate : DateTime
  gender : Gender
  fcmToken : String
  createdAt : DateTime
  updatedAt : DateTime
  point : Int
}

entity PointHistory {
  *id : String <<PK>>
  userId : String <<FK>>
  amount : Int
  type : PointType
  description : String
  createdAt : DateTime
}

entity Channel {
  *id : String <<PK>>
  user1Id : String <<FK>>
  user2Id : String <<FK>>
  status : String
  startedAt : DateTime
  endedAt : DateTime
  inviteCode : String
  anniversary : DateTime
  keywords : String
  createdAt : DateTime
  updatedAt : DateTime
}

entity Assistant {
  *id : String <<PK>>
  userId : String <<FK>>
  channelId : String <<FK>>
  createdAt : DateTime
}

entity ChatHistory {
  *id : String <<PK>>
  assistantId : String <<FK>>
  channelId : String <<FK>>
  userId : String <<FK>>
  sender : String
  message : String
  createdAt : DateTime
}

entity PersonaProfile {
  *id : String <<PK>>
  userId : String <<FK>>
  categoryCodeId : String <<FK>>
  content : String
  isStatic : Boolean
  source : ProfileSource
  confidenceScore : Float
  createdAt : DateTime
  updatedAt : DateTime
  -- UNIQUE(userId, categoryCodeId)
}

' 관계
User ||--o{ PointHistory : "pointHistories"
User ||--o{ Assistant : "assistants"
User ||--o{ ChatHistory : "chatHistories"
User ||--o{ PersonaProfile : "personaProfiles"
User ||--o{ PushSchedule : "pushSchedules"
User ||--o{ Advice : "generatedReports"
User ||--o{ Channel : "channelsAsUser1"
User ||--o{ Channel : "channelsAsUser2"
User ||--o{ Event : "events"
User ||--o{ SuggestedField : "suggestedFields"

PointHistory }o--|| User : "user"

Channel }o--|| User : "user1"
Channel }o--|| User : "user2"
Channel ||--o{ Assistant : "assistants"
Channel ||--o{ Advice : "advices"
Channel ||--o{ ChatHistory : "chatHistories"
Channel ||--o{ CoupleAnalysis : "coupleAnalyses"

Assistant }o--|| User : "user"
Assistant }o--|| Channel : "channel"
Assistant ||--o{ ChatHistory : "chatHistories"

ChatHistory }o--|| Assistant : "assistant"
ChatHistory }o--|| Channel : "channel"
ChatHistory }o--|| User : "user"

CoupleAnalysis }o--|| Channel : "channel"

CategoryCode ||--o{ QuestionTemplate : "questionTemplates"
CategoryCode ||--o{ PersonaProfile : "personaProfiles"
CategoryCode ||--o{ SuggestedField : "suggestedFields"

PersonaProfile }o--|| User : "user"
PersonaProfile }o--|| CategoryCode : "categoryCode"

Advice }o--|| Channel : "channel"
Advice }o--|| User : "generatedBy"

QuestionTemplate }o--|| CategoryCode : "categoryCode"
QuestionTemplate ||--o{ PushSchedule : "pushSchedules"

PushSchedule }o--|| User : "user"
PushSchedule }o--|| QuestionTemplate : "question"
PushSchedule ||--o{ UserAnswer : "userAnswer"

UserAnswer }o--|| PushSchedule : "pushSchedule"

Event }o--|| User : "user"

SuggestedField }o--|| User : "user"
SuggestedField }o--|| CategoryCode : "categoryCode"

@enduml
